[package]
name = "ecpluginbuilder"
version = "0.1.0"
authors = ["Polina Shubina <925043@gmail.com>"]

[dependencies]
regex = "0.2"
notify = "4.0.0"
serde = "1.0"
serde_derive = "1.0"
serde-xml-rs = "0.2.1"
reqwest = { git = "https://github.com/scottschroeder/reqwest", branch = "noverify" }
url = "1.7"
serde_json="1.0"
docopt = "0.8"


[lib]
name="rusty_sentry"
path="src/lib.rs"

[[bin]]
name="main"
path="src/main.rs"
